<resources>
    <string name="app_name">Ejercicio 2: Navegando Actividades</string>
    <string name="tvGrid">Los Super Amigos</string>
    <string name="lblnombre">Nombre</string>
    <string name="lblciudad">Ciudad de Nacimiento</string>
    <string name="lblmatricula">Matricula</string>
    <string name="lblExpresion">Expresion Creativa</string>
    <string name="rbAmarillo">Amarillo</string>
    <string name="rbNormal">Normal</string>
    <string name="txColor">Selecionar Color de Background</string>
    <string name="btnAtras">Atras</string>
    <string name="chAzul">Azul</string>
</resources>
