<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF6B1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="225dp"
        android:layout_height="222dp"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:contentDescription="@null"
        android:src="@drawable/alexander" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/lblnombre"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text=""
        android:textColor="#013863"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/lblciudad"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text=""
        android:textColor="#013863"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/lblmatricula"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text=""
        android:textColor="#013863"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvExpresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/lblExpresion"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txExpresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="fill_horizontal"
        android:maxLength="600"
        android:minLines="200"
        android:scrollbars="horizontal"
        android:text=""
        android:textColor="#013863"
        android:textSize="15sp" />
</LinearLayout>